--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: java
 jdk:
   - oraclejdk8
 install: true
-script: mvn clean install
+script: 
+  - mvn clean install
+  - bash <(curl -s https://codecov.io/bash)
 cache:
   directories:
   - $HOME/.m2
