--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk8
 install: true
 script: 
-  - mvn clean install
+  - mvn clean install cobertura:cobertura
   - bash <(curl -s https://codecov.io/bash)
 cache:
   directories:
